pkg/lang/syntax/testdata/ub/validate/invalid/factory/state-moves-duplicate-from.ub
factory: {
  state-moves: [
    { from: 'resource.old', to: 'resource.new' },
    { from: 'resource.old', to: 'resource.final' },
  ]
}
